fixed the css file so that the scientific calc tools could be visible, and edited the html and JS file to fix the Rad/Deg toggle button.

--- a/style.css
+++ b/style.css
@@ -177,7 +177,8 @@ button:hover {
 .view {
     display: none;
     flex-direction: column;
-    height: 365px;
+    height: auto;
+    min-height: 365px;
 }
 
 .view.active {
